# ros2_control_system

./: .gitignore  LAUNCH_GUIDE.md  README.md
asset_description/: CMakeLists.txt  package.xml
asset_description/marvin/rviz/: marvin_left.rviz  marvin_right.rviz
asset_description/marvin/urdf/: Marvin M6-S-L-CCS-696-V4.0 urdf.urdf  Marvin M6-S-R-CCS-696-V4.0 urdf.urdf
asset_description/omnipicker/rviz/: urdf.rviz
asset_description/omnipicker/urdf/: robot_urdf.xacro
asset_description/wuji/rviz/: wujihand_right.rviz
asset_description/wuji/urdf/: wujihand-right.urdf.xacro
camera_system/: CMakeLists.txt  package.xml
camera_system/bringup/config/: cameras.yaml  orbbec_defaults.yaml  realsense_defaults.yaml
camera_system/bringup/launch/: dual_wrist_orbbec.launch.py  single_orbbec.launch.py  single_realsense.launch.py
camera_system/test/: print_orbbec_serials.cpp
htc_system/: CMakeLists.txt  package.xml
htc_system/bringup/config/: trackers.yaml
htc_system/bringup/launch/: tracker_publisher.launch.py  tracker_publisher_record.launch.py
htc_system/scripts/: export_tf_bag_to_csv.py
htc_system/src/: tracker_publisher.cpp
htc_system/test/: test_tracker_pose.cpp
manus_system/: CMakeLists.txt  package.xml
manus_system/bringup/config/: manus_calibration.yaml  manus_gripper.yaml  manus_raw_publisher.yaml
manus_system/bringup/launch/: manus_calibration.launch.py  manus_gripper.launch.py  manus_raw_publisher.launch.py
manus_system/bringup/scripts/: manus_calibration_workflow.py
manus_system/hardware/src/: manus_calibration_main.cpp  manus_calibration_node.cpp  manus_gripper_node.cpp  manus_raw_publisher_main.cpp  manus_raw_publisher_node.cpp
manus_system/msg/: ManusGloveRaw.msg  ManusGloveRawArray.msg  ManusRawNode.msg
manus_system/srv/: CancelGloveCalibration.srv  FinishGloveCalibration.srv  ListGloves.srv  LoadGloveCalibration.srv  RunGloveCalibrationStep.srv  StartGloveCalibration.srv
marvin_system/: CMakeLists.txt  marvin_system_controller_plugins.xml  marvin_system_plugins.xml  package.xml
marvin_system/bringup/config/: marvin_dual_gripper_controllers.yaml  marvin_gripper_teleop.yaml  marvin_ik_controllers.yaml  marvin_tracker_teleop.yaml  marvin_tracker_teleop_controllers.yaml
marvin_system/bringup/launch/: marvin_dual_joint_gui_control.launch.py  marvin_gripper_teleop.launch.py  marvin_ik_control.launch.py  marvin_joint_bag_replay.launch.py  marvin_joy_control.launch.py  marvin_tracker_teleop.launch.py
marvin_system/bringup/scripts/: joint_trajectory_bag_clean.py  joint_trajectory_bag_replay.py  tracker_camera_dashboard.py  tracker_camera_startup_manager.py  tracker_teleop_keyboard.py
marvin_system/bringup/src/: joy_to_pose.cpp
marvin_system/controller/src/: tracker_teleop_controller.cpp
marvin_system/description/config/: home_joint_positions.yaml
marvin_system/description/launch/: display_marvin_dual.launch.py  view_marvin_dual.launch.py
marvin_system/description/ros2_control/: marvin_dual_system.ros2_control.xacro
marvin_system/description/scripts/: ik_solve_log_summary.txt
marvin_system/description/urdf/: marvin_dual.urdf  marvin_left.urdf  marvin_right.urdf
marvin_system/hardware/src/: marvin.cpp  workspace_guard.cpp
marvin_system/test/: debug_teleop_first_frame.txt  ik_solution_explorer.cpp  run_tracking_ik_first_frame_window_sweep.sh  tracking_ik_first_frame_window_sweep.cpp  workspace_guard_test.cpp
ros2_control_marvin/: CMakeLists.txt  package.xml  ros2_control_marvin_controller_plugins.xml  ros2_control_marvin_plugins.xml
ros2_control_marvin/bringup/config/: marvin_dual_controllers.yaml  marvin_ik_controllers.yaml  marvin_tracker_teleop_controllers.yaml
ros2_control_marvin/bringup/launch/: gui_joint_state_to_forward_command.py  marvin_dual_joint_gui_control.launch.py  marvin_ik_control.launch.py  marvin_joy_control.launch.py  marvin_tracker_teleop.launch.py
ros2_control_marvin/bringup/scripts/: tracker_teleop_keyboard.py
ros2_control_marvin/bringup/src/: gui_joint_state_to_forward_command.cpp  joy_to_pose.cpp
ros2_control_marvin/controller/src/: ik_controller.cpp  tracker_teleop_controller.cpp
ros2_control_marvin/description/config/: home_joint_positions.yaml
ros2_control_marvin/description/launch/: display_marvin_dual.launch.py  view_marvin_dual.launch.py
ros2_control_marvin/description/ros2_control/: marvin_arm.ros2_control.xacro  marvin_dual_system.ros2_control.xacro
ros2_control_marvin/description/rviz/: marvin_dual.rviz
ros2_control_marvin/description/scripts/: ik_solve_log_summary.txt  joint_gui_publisher.py  vector_marker_publisher.py
ros2_control_marvin/description/urdf/: marvin_dual.urdf  marvin_left.urdf  marvin_right.urdf
ros2_control_marvin/hardware/src/: marvin.cpp  workspace_guard.cpp
ros2_control_marvin/test/: ik_solution_explorer.cpp
ros2_control_wujihand/: CMakeLists.txt  package.xml  ros2_control_wujihand_controller_plugins.xml  ros2_control_wujihand_plugins.xml
ros2_control_wujihand/bringup/config/: rl_controller.yaml  wujihand_controllers.yaml
ros2_control_wujihand/bringup/launch/: wujihand_right_control.launch.py  wujihand_right_custom_controller.launch.py
ros2_control_wujihand/controller/: rl_controller.cpp  rl_policy.cpp
ros2_control_wujihand/description/launch/: view_wujihand_right.launch.py
ros2_control_wujihand/description/ros2_control/: wujihand-right.ros2_control.xacro
ros2_control_wujihand/description/urdf/: wujihand-right.urdf
ros2_control_wujihand/hardware/: wujihand.cpp
wujihand_system/: CMakeLists.txt  package.xml  wujihand_system_controller_plugins.xml  wujihand_system_plugins.xml
wujihand_system/bringup/config/: rl_controller.yaml  wujihand_controllers.yaml
wujihand_system/bringup/launch/: gui_joint_state_to_forward_command.py  wujihand_right_control.launch.py  wujihand_right_custom_controller.launch.py
wujihand_system/controller/: rl_controller.cpp  rl_policy.cpp
wujihand_system/description/launch/: view_wujihand_right.launch.py
wujihand_system/hardware/: wujihand.cpp
wujihand_system/policy/: model_1000.onnx
(+32 files in other folders)
